<resources>
    <string name="app_name">Lagel</string>
    <string name="other_see_descriptions">Otro</string>
    <string name="for_parts">Para partes</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="by_continuing">By Continuing, You agree to the Lagel</string>
    <string name="termscondition"><u>Terms and Conditions</u></string>
    <string name="and">and</string>
    <string name="privacyPolicy"><u>Privacy Policy</u></string>
    <string name="quick_connect_with">Quickly connect with</string>
    <string name="create_account_text">Create an account to buy, sell and communicate with sellers near you.</string>
    <string name="phoneOrEmailOrUser">Username</string>
    <string name="login">Login</string>
    <string name="forgot_your_login">Forgot your login details\?</string>
    <string name="get_help_signing_in_" translatable="false"><u>Get help signing in.</u></string>
    <string name="get_help_signing_in"><u>Forgot Password?</u></string>
    <string name="or"><u>Or</u></string>
    <string name="Loginfailed">Login failed</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="find_your_acc">Find your account</string>
    <string name="enter_your_email_add">Enter your e-mail address associated with your account.</string>
    <string name="send">Send</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_up">Create New Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">Username</string>
    <string name="user_full_name">Full name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="number">Number</string>
    <string name="emai_id">Email Address</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="by_signing_up">By signing up, you agree to our</string>
    <string name="create">Click here to finalize</string>
    <string name="updateProfilePic">Update profile picture</string>
    <string name="take_beautiful_pic">Take a new picture</string>
    <string name="choose_existing_img">Choose an existing photo</string>
    <string name="remove_existing_img">Remove an existing photo</string>
    <string name="browse">Browse</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_accept_termsNconditions">Please accept Terms and Conditions</string>
    <string name="username_already_registered">Username already registered</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="phone_already_registered">Mobile number already registered</string>
    <string name="do_you_already_have_a_lagel_account_if_yes_click_here"><u>Do you already have a Lagel account?</u></string>
    <string name="if_yes_click_here">If Yes,\nClick here</string>
    <string name="number_verification">Number Verification</string>
    <string name="enter_verification_code">Enter the verification code</string>
    <string name="enter_the_code">Enter the code that we sent to</string>
    <string name="resend_code">Resend Code.</string>
    <string name="verify">Verify</string>
    <string name="invalid_otp_code">Invalid otp code</string>
    <string name="home">Home</string>
    <string name="socail">Social</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>
    <string name="sell_your_stuff">Sell Your Stuff</string>
    <string name="featured">Featured</string>
    <string name="time">Time</string>
    <string name="please_follow_user">Please follow users to view</string>
    <string name="post_in_your">posts in your newsfeed</string>
    <string name="find_friends">Find Friends</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="daniel_welllington">Daniel Wellington Classic</string>
    <string name="amelia">Amelia Kelly</string>
    <string name="thousasnd_of_buyer">Thousands of buyer are</string>
    <string name="browsing_yelo">Browsing Lagel right now</string>
    <string name="no_chat_available">No chats available</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="people">People</string>
    <string name="followings">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sold">Sold</string>
    <string name="favourites">Favorites</string>
    <string name="call">Call</string>
    <string name="Email">Email or Phone Number</string>
    <string name="you">You</string>
    <string name="liked_your_post">liked your post</string>
    <string name="startes_following">started following</string>
    <string name="left_a_review_on">left a review on</string>
    <string name="commented_your_post">left a review on your post</string>
    <string name="startedFollowingYou">started following you</string>
    <string name="welcome_on_yelo">Welcome to Lagel!</string>
    <string name="make_money_selling">Make money selling What you don\'t need</string>
    <string name="and_find_great">and find great deals nearby</string>
    <string name="no_following_yet">No following yet!</string>
    <string name="no_follower_yet">No follower yet!</string>
    <string name="send_a_offer_on_your_product">Sent an offer on your product</string>
    <string name="liked">likes</string>
    <string name="own">own</string>
    <string name="Code">HTG</string>
    <string name="Symbol">G</string>
    <string name="filter">Filter</string>
    <string name="change_Location">Change Location</string>
    <string name="category">Categories</string>
    <string name="distance">Distance</string>
    <string name="sort_by">Sort By</string>
    <string name="please_select_your_loc">Please select location</string>
    <string name="distanceAsc">distanceAsc</string>
    <string name="postedOnDesc">postedOnDesc</string>
    <string name="priceAsc">priceAsc</string>
    <string name="priceDsc">priceDsc</string>
    <string name="newest_first">Newest First</string>
    <string name="closest_first">Closest First</string>
    <string name="price_low_to_high">Price : low to high</string>
    <string name="price_high_to_low">Price : high to low</string>
    <string name="posted_within">Posted Within</string>
    <string name="the_last_24hr">The Last 24 hour</string>
    <string name="the_last_7day">The Last 7 days</string>
    <string name="the_last_30day">The Last 30 days</string>
    <string name="all_producs">All Products</string>
    <string name="min_price_cant_be_higher">The minimum price can\'t be higher than the maximum price.</string>
    <string name="change_location">Change Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="add_a_review">Review</string>
    <string name="share_item">Share Item</string>
    <string name="share_on_fb">Share on facebook</string>
    <string name="copy_image_url">Copy Share URL</string>
    <string name="sold_by">Sold by</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="description">Description</string>
    <string name="conditions">Condition</string>
    <string name="default_location">1241 East Main Street \n Stamford ct- 06902</string>
    <string name="negotiable">Negotiable</string>
    <string name="not_negotiable">Not Negotiable</string>
    <string name="make_offer">Make Offer</string>
    <string name="your_offer">Your Offer : </string>
    <string name="asking_price">Asking Price : </string>
    <string name="away">away</string>
    <string name="product_location">Products Location</string>
    <string name="url_copied">URL copied</string>
    <string name="chat">CHAT</string>
    <string name="report_item">Report Item</string>
    <string name="report">Report</string>
    <string name="why_do_you_want">Why do you report this item ?</string>
    <string name="the_product_report_has_been">The product has been reported. Thanks!</string>
    <string name="the_report_is_already_reported">The product is already reported. Thanks!</string>
    <string name="report_user">Report User</string>
    <string name="the_user_report_has_been">The user has been reported. Thanks</string>
    <string name="review">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="there_is_no_review">There are no reviews on this product,</string>
    <string name="be_the_first">be the first to add one</string>
    <string name="profile_details">Profile details couldn\'t load</string>
    <string name="please_try_again"><u>Please try again</u>.</string>
    <string name="private_information">Private Information</string>
    <string name="setting">Settings</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="follow_people">Follow People</string>
    <string name="find_facebook_friends">Find Facebook Friends</string>
    <string name="connect_to_contacts">Connect to Contacts</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="language">Language</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="about">About</string>
    <string name="search_text">Search…</string>
    <string name="search_post">Search Posts</string>
    <string name="search_people">Search Peoples</string>
    <string name="no_post">No Post</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="termsNcondition">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="version">App Version </string>
    <string name="are_you_sure_u_want">Are you sure you want to logout?</string>
    <string name="do_you_want_to_sell_it_again">Do you want to sell it again?</string>
    <string name="sell_it_again">Sell it again</string>
    <string name="no_post_yet">No Post Yet!</string>
    <string name="no_sold_yet">No Sold Yet!</string>
    <string name="no_post_found">No post yet near you. Be the first to post.</string>
    <string name="select_language">Select Language</string>
    <string name="english_language">English</string>
    <string name="french_language">French</string>
    <string name="Product_category">Product Category</string>
    <string name="congratulation">Congratulations !</string>
    <string name="successfully_posted">Successfully posted your listing.</string>
    <string name="other">Other</string>
    <string name="refurbished">Refurbished</string>
    <string name="used_normal_wear">Used</string>
    <string name="open_box">Open Box</string>
    <string name="collectible">Collectible</string>
    <string name="new_never_used">New</string>
    <string name="simple_image_view">This is simple image view</string>
    <string name="message">Message</string>
    <string name="error_message">Here there is an error</string>
    <string name="dialog_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="please_allow_the_permission">Please allow the permission to access the</string>
    <string name="allow">Allow</string>
    <string name="camera">Camera</string>
    <string name="seft_hint_one">Meet in person and pay by Paypal.Me</string>
    <string name="seft_hint_two">Keep conversation in the Lagel chat.</string>
    <string name="seft_hint_three">Too good to be true? Find another buyer/seller.</string>
    <string name="ok_text">OK</string>
    <string name="stay_safe_title">STAY SAFE</string>
    <string name="spanish">Spanish</string>
</resources>