<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@android:color/transparent">
    <LinearLayout
        android:background="@drawable/sefty_aleret_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/chat_popup"
                    android:layout_width="130dp"
                    android:layout_height="130dp" />
                <TextView
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/stay_safe_title"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/pink_dot_icon_selector"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_text_gray"
                android:text="@string/seft_hint_one"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/pink_dot_icon_selector"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_text_gray"
                android:text="@string/seft_hint_two"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/pink_dot_icon_selector"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_text_gray"
                android:text="@string/seft_hint_three"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/close_app"
                android:foreground="?android:selectableItemBackground"
                android:textAllCaps="false"
                android:textSize="19sp"
                android:text="@string/ok_text"
                android:textColor="@color/white"
                android:background="@drawable/pink_circle_bg"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>